Nuevo Login Estilos

--- a/WebCRM/Pages/Auth/RecoverPassword.cshtml
+++ b/WebCRM/Pages/Auth/RecoverPassword.cshtml
@@ -6,15 +6,22 @@
 }
 
 <form method="post" class="form-signin">
+    <div class="logo-sign">
+        <partial name="_CompanyLogoSmall" />
+    </div>
+    <p>
+        Solución <strong>CRM</strong><br /> para gestión de comercio automotriz.
+    </p>
     <div class="card card-login card-hidden">
-        <div class="card-header card-header-info text-center">
-            <h4 class="card-title">
-                <img src="~/images/branding/Logo-DMS-white.svg" title="DMS" alt="DMS" class="login-logo" style="width:10em" />
-            </h4>
-            <div class="social-line">
-            </div>
-        </div>
+        @*<div class="card-header card-header-info text-center">
+                <h4 class="card-title">
+                    <img src="~/images/branding/Logo-DMS-white.svg" title="DMS" alt="DMS" class="login-logo" style="width:10em" />
+                </h4>
+                <div class="social-line">
+                </div>
+            </div>*@
         <div class="card-body ">
+            <h3 class="login-titles">Recuperar Contraseña</h3>
             <span class="bmd-form-group">
                 <div class="input-group">
                     <div class="input-group-prepend">
@@ -75,7 +82,7 @@
                     </div>
                 }
                 <div class="row">
-                    <div class="col-md-12"><button class="btn btn-md btn-info btn-block" type="submit">Recuperar clave</button></div>
+                    <div class="col-md-12"><button class="btn btn-md btn-block blue-btn" type="submit">Recuperar clave</button></div>
                 </div>
                 <div class="row">
                     <div class="col-md-12"><a href="./login" class="btn btn-sm btn-block btn-link btn-github">Volver al login</a></div>
