--- a/WebCRM/Pages/Auth/login.cshtml
+++ b/WebCRM/Pages/Auth/login.cshtml
@@ -6,18 +6,22 @@
 }
 
 <form method="post"  class="form-signin">
+    <div class="logo-sign">
+        <partial name="_CompanyLogoSmall" />
+    </div>
+    <p>Solución <strong>CRM</strong><br /> para gestión de comercio automotriz.
+    </p>
     <input type="hidden" asp-for="ReturnUrl" value="@Model.ReturnUrl" />
     <div class="card card-login card-hidden">
-        <div class="card-header card-header-info text-center">
+        @*<div class="card-header card-header-info text-center">
             <h5 class="card-title">
                 <partial name="_CompanyLogoSmall" />
             </h5>
             <div class="social-line">
             </div>
-        </div>
-        <div class="card-body ">
-          
-
+        </div>*@
+        <div class="card-body ">          
+            <h3 class="login-titles">Inicio de Sesión</h3>
             <span class="bmd-form-group">
                 <div class="input-group">
                     <div class="input-group-prepend">
@@ -49,7 +53,7 @@
                 </div>
             </span>
             <span class="bmd-form-group">
-                <div class="input-group">
+                @*<div class="input-group">
                     <div class="input-group-prepend">
                         <span class="input-group-text">
                             <i class="material-icons">input</i>
@@ -57,7 +61,7 @@
                     </div>
 
                     <input class="form-control" placeholder="Captcha" asp-for="CaptchaCode" autocomplete="off" required />
-                </div>
+                </div>*@
             </span>
 
         </div>
@@ -73,14 +77,14 @@
                         }
                     </div>
                 </div>
-                <div class="row">
+                @*<div class="row">
                     <div class="col-md-12 text-center">
                         <img id="img-captcha" src="~/get-captcha-image" />
                     </div>
-                </div>
+                </div>*@
               
                 <div class="row">
-                    <div class="col-md-12"><button class="btn btn-block" type="submit">Ingresar</button></div>
+                    <div class="col-md-12"><button class="btn btn-block blue-btn" type="submit">Ingresar</button></div>
                 </div>
                 <div class="row">
                     <div class="col-md-12"><a href="./recoverpassword" class="btn btn-sm btn-block btn-link btn-github">Recuperar clave</a></div>
